gtk-4.0: fixed size check/radio icons
in upstream, it was blurry because it's downscaled to 0.8

--- a/src/gtk-4.0/widgets/_menus.scss
+++ b/src/gtk-4.0/widgets/_menus.scss
@@ -55,8 +55,6 @@ popover.menu {
       background: none;
       color: $text_color;
       box-shadow: none;
-
-      transform: scale(0.8);
     }
   }
 
@@ -65,7 +63,7 @@ popover.menu {
   
   radio {
     padding: 0;
-    border: 1.2px solid transparentize($text_color, 0.7);
+    border: 1px solid transparentize($text_color, 0.7);
   }
 
   check,
